<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tituloMain">Firebase Authentication Methods</string>
    <string name="imgMain">imgMain</string>
    <string name="emailPassMain">Sign in with email</string>
    <string name="googlePassMain">Sign in with Google</string>
    <string name="applePassMain">Sign in with Github</string>
    <string name="phonePassMain">Sign in with Phone</string>
    <string name="logout">Logout</string>
    <string name="mail">Mail</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="name">Name</string>
    <string name="phone_numbre">Phone Numbre</string>
    <string name="relation">Relation</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="gitimage">gitimage</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
</resources>