<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primaryContainer"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/benchnine_bold"
            android:padding="10dp"
            android:text="@string/tituloMain"
            android:textColor="@color/md_theme_light_onBackground"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/firebaselogo"
            android:layout_marginTop="50dp"
            android:id="@+id/img_send_otp"
            android:contentDescription="@string/imgMain"
            />

        <Button
            android:id="@+id/usrpwd"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:fontFamily="@font/benchnine_bold"
            android:text="@string/emailPassMain"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/mail"
            app:iconTint="@color/md_theme_light_onTertiaryContainer" />

        <Button
            android:id="@+id/google"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:fontFamily="@font/benchnine_bold"
            android:text="@string/googlePassMain"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/ic_google_icon"
            app:iconTint="@color/md_theme_light_onTertiaryContainer" />

        <Button
            android:id="@+id/apple"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:fontFamily="@font/benchnine_bold"
            android:text="@string/applePassMain"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/ic_iconmonstr_github_1"
            app:iconTint="@color/md_theme_light_onTertiaryContainer" />

        <Button
            android:id="@+id/phonebtn"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:fontFamily="@font/benchnine_bold"
            android:text="@string/phonePassMain"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            android:textSize="20sp"
            app:icon="@drawable/ic_call_fill0_wght400_grad0_opsz48"
            app:iconTint="@color/md_theme_light_onTertiaryContainer" />
</LinearLayout>

</ScrollView>